fixed overflow issues for the home page in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/photo/streets.JPG");
 }
 #welcomeText{
-    border: 2px solid white;
   color: white;
   position: relative;
   top: 50%;
@@ -48,6 +47,7 @@ body{
   /*font-weight: bold;
   z-index: 2; */
   padding: 20px;
+  overflow: auto;
 }
 .text-shadow{
     text-shadow: 0 1px #000000;
@@ -67,6 +67,11 @@ section{
 	/* text-align: center; */
 	position: relative;
 }
+#myCharacter {
+    background-color: white;
+    border: 13px solid white;
+}
+
 /*********************/
 /* MAIN */
 /*********************/
@@ -148,7 +153,17 @@ footer p{
         /* increases height of iframe */
         min-height: 543px;
     }
-    
+    #welcomeText {
+        top: 46%;
+        height: 90%;
+        overflow: auto;
+    }
+    #smallMobile {
+        font-size: 1.7rem;
+    }
+    #myCharacter {
+        width: 50%;
+    }
 }
 @media screen and (min-width:640px) and (max-width: 768px) {
     /************************/
